# tauri-plugin-setapp

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/vanilla/: package-lock.json  package.json
examples/vanilla/public/: index.html
examples/vanilla/src-tauri/: Cargo.toml  Info.plist  setappPublicKey.pem  tauri.conf.json
examples/vanilla/src-tauri/capabilities/: default.json
examples/vanilla/src-tauri/src/: main.rs
lib/: README.md  build.sh
lib/SetappBridge/SetappBridge/: SetappBridge.swift
lib/SetappBridge/SetappBridge.xcodeproj/: project.pbxproj
lib/SetappBridge/SetappBridge.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
lib/SetappBridge/SetappBridge.xcodeproj/xcshareddata/xcschemes/: SetappBridge Release.xcscheme  SetappBridge.xcscheme
src/: lib.rs
