[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["You"]
repository = ""
edition = "2021"
rust-version = "1.60"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "devtools"] }
tauri-plugin-setapp = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
